RESOLVED FIXED61900
Incorrect UA style when printing a simple document
https://bugs.webkit.org/show_bug.cgi?id=61900
Summary Incorrect UA style when printing a simple document
mitz
Reported 2011-06-01 19:02:53 PDT
Incorrect UA style when printing a simple document
Attachments
Ensure that the default print style is set to the default simple style in the simple document case (2.14 KB, patch)
2011-06-01 19:09 PDT, mitz
andersca: review+
mitz
Comment 1 2011-06-01 19:09:01 PDT
Created attachment 95702 [details] Ensure that the default print style is set to the default simple style in the simple document case
mitz
Comment 2 2011-06-01 19:10:25 PDT
mitz
Comment 3 2011-06-01 19:11:25 PDT
You can reproduce this bug if, in a fresh instance of Safari, you navigate to data:text/html,<div>foo</div><div>bar</div> and print the document. It will print “foobar” on a single line, because the div elements will be inlines.
mitz
Comment 4 2011-06-02 00:21:52 PDT
Fixed in r87882.
Note You need to log in before you can comment on or make changes to this bug.